# graphics_projects

./: CMakeLists.txt
CircleDrawing/: CMakeLists.txt  main.cpp
Clipping/LineClipping/: CMakeLists.txt  main.cpp
Clipping/PointClipping/: CMakeLists.txt  main.cpp
Clipping/PointClipping(Polygon_Window)/: CMakeLists.txt  main.cpp
DrawingLine/: CMakeLists.txt  main.cpp
Region Filling/Circle Filling/: CMakeLists.txt  main.cpp
Region Filling/Polygon Filling/: CMakeLists.txt  main.cpp
Region Filling/Rectangle Filling/: CMakeLists.txt  main.cpp
Transformation/: CMakeLists.txt  main.cpp
